packages/isar_generator/test/errors/class/variable.dart
// only classes

import 'package:isar/isar.dart';

@collection
const t = 'hello';
